Tested/Update
Fixed Wardrobe getters and completed Automated Stylist JavaFX GUI